--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#31859d</color>
+    <color name="colorPrimaryDark">#00586f</color>
+    <color name="colorAccent">#67b5ce</color>
+
+    <color name="white">#ffffff</color>
+    <color name="redColor">#f42a42</color>
+    <color name="greenColor">#008000</color>
+    <color name="smallTextColor"> #154360 </color>
+    <color name="flagColor">#006A4E</color>
+    <color name="flagRed">#F42A42</color>
+
+    <color name="another">#017D3E</color>
+    <color name="gmailColor">#DF4A32</color>
+    <color name="facebookColo">#3B5998</color>
+    <color name="backgroundColor">#f5f5f5</color>
+    <color name="btnColor">#14374A</color>
+
+
+    <color name="greenColo">#00c853</color>
+
+    <color name="nipaColor">#669999</color>
 </resources>
