--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:focusableInTouchMode="true"
     android:descendantFocusability="beforeDescendants"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:focusableInTouchMode="true"
+    android:padding="@dimen/padding"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="@dimen/padding"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/largePaggind"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <EditText
             android:id="@+id/nameEtRegisterWithG"
@@ -19,7 +21,7 @@
             android:layout_marginTop="@dimen/padding"
             android:background="@drawable/background_of_edittext"
             android:ems="10"
-            android:hint="Full Name ( In English )"
+            android:hint="Name"
             android:inputType="textPersonName"
             android:maxLines="1"
             android:padding="@dimen/largeMargin"
@@ -51,16 +53,23 @@
             android:padding="@dimen/largeMargin"
             android:textSize="@dimen/normalTextSize" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center">
+
         <Button
             android:id="@+id/registerBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/largePaggind"
             android:background="@drawable/background_of_button"
             android:text="Submit"
-            android:layout_marginTop="@dimen/largePaggind"
             android:textAppearance="@android:style/TextAppearance"
             android:textColor="@color/white"
-            android:textSize="@dimen/normalTextSize"/>
+            android:textSize="@dimen/normalTextSize" />
 
     </LinearLayout>
 
