--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -97,7 +97,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/padding"
-                android:text="New to blood+ ?"
+                android:text="Not registered ?"
                 android:textColor="@color/white"
                 android:textSize="@dimen/smallTextSize" />
 
@@ -107,7 +107,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/padding"
-                android:text="Register here"
+                android:text="@string/register_here"
                 android:textAppearance="@android:style/TextAppearance"
                 android:textColor="@color/white" />
 
