--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,4 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.shishir.locationhack.MainActivity"></RelativeLayout>
+    tools:context="com.example.shishir.locationhack.MainActivity">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="WelCome"
+        android:layout_centerInParent="true"
+        android:textSize="@dimen/extralargeTextSize"/>
+</RelativeLayout>
