--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:padding="@dimen/largePaggind"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
     tools:context="com.example.shishir.locationhack.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/startStopButton"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="WelCome"
-        android:layout_centerInParent="true"
-        android:textSize="@dimen/extralargeTextSize"/>
-</RelativeLayout>
+        android:text="START"
+        android:textSize="@dimen/normalTextSize"/>
+    <TextView
+        android:id="@+id/service"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:padding="@dimen/padding"
+        android:text="Service is Running..."
+        android:textSize="@dimen/smallTextSize"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="70dp"
+        android:gravity="center"/>
+
+</LinearLayout>
