--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -13,7 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:padding="@dimen/padding"
+            android:padding="@dimen/largeMargin"
             android:text="24 November"
             android:textSize="@dimen/normalTextSize" />
     </LinearLayout>
