--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,6 +22,10 @@
         <item name="android:windowEnterAnimation">@anim/slide_from_right</item>
         <item name="android:windowExitAnimation">@anim/slide_to_right</item>
     </style>
+    <style name="textFace">
+        <item name="android:textSize">8sp</item>
+        <item name="android:textColor">#ffffff</item>
+    </style>
 
 
 </resources>
